# pubmed_rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: audit.py  config.py  dependencies.py  logging_config.py  main.py  schemas.py
api/routers/: ask.py  cds_hooks.py  health.py
demo/: gradio_app.py
docs/: known-limitations.md  pre-release-checklist.md
docs/decisions/: ADR-033-vector-store-backend.md  ADR-034-embedding-provider.md  ADR-035-corpus-scope.md  ADR-036-pipeline-orchestration.md  ADR-037-observability.md  ADR-038-llm-production-default.md  ADR-039-multi-specialty-corpus.md  ADR-040-guardrails.md  ADR-041-hybrid-bm25-rrf.md
eval/: evaluate.py  questions.sample.jsonl  results.csv  retrieval_metrics.py
notebooks/: embeddings_walkthrough.ipynb
scripts/: compare_v0_1_vs_v0_2.py  eval_v0_2.py  reseed_v0_2.py  validate_eval_set.py
src/pubmed_rag/: __init__.py  chunk.py  embed.py  faithfulness_nli.py  generate.py  guardrails.py  ingest.py  parents.py  phi.py  pipeline.py  rerank.py  retrieve.py  types.py  vectorstore.py
tests/: conftest.py  test_api.py  test_audit.py  test_chunk.py  test_embed.py  test_faithfulness_nli.py  test_generate.py  test_guardrails.py  test_phi.py  test_pipeline.py  test_rerank.py  test_retrieve.py
