[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubmed-rag"
version = "0.1.0"
description = "A RAG pipeline for biomedical literature over PubMed"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Omkar Adhali" }]
requires-python = ">=3.12"

dependencies = [
    # Data ingestion
    "requests>=2.32",
    # Text splitting
    "langchain-text-splitters>=0.3",
    # Embeddings
    "sentence-transformers>=3.3",
    # Vector store
    "chromadb>=0.6",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # LLM
    "anthropic>=0.49",
    "openai>=1.30",
    # Utilities
    "python-dotenv>=1.0",
    "tqdm>=4.67",
    # API config + logging
    "pydantic-settings>=2.0",
    "python-json-logger>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "detect-secrets>=1.5",
]
# Install separately on Day 14: uv pip install -e ".[eval]"
eval = [
    "ragas>=0.2",
    "datasets>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pubmed_rag"]

# ── uv index configuration ─────────────────────────────────────────────────
# Use PyTorch CPU-only builds (no GPU on this machine — avoids 500MB+ CUDA wheels)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

# ── Ruff (linter + formatter) ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
src = ["src", "api"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

# ── Pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
