[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubmed-rag"
version = "0.1.0"
description = "A RAG pipeline for biomedical literature over PubMed"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Omkar Adhali", email = "omkar.a2989@gmail.com" }]
requires-python = ">=3.12"
keywords = ["rag", "pubmed", "biomedical", "nlp", "llm", "vector-search", "clinical-nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Data ingestion
    "requests>=2.32",
    # Text splitting
    "langchain-text-splitters>=0.3",
    # Embeddings — torch source is overridden to CPU-only build in [tool.uv.sources]
    "torch>=2.0",
    "sentence-transformers>=3.3",
    # Vector store
    "chromadb>=0.6",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # LLM
    "anthropic>=0.49",
    "openai>=1.30",
    # Utilities
    "python-dotenv>=1.0",
    "tqdm>=4.67",
    # API config + logging
    "pydantic-settings>=2.0",
    "python-json-logger>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "detect-secrets>=1.5",
]

eval = [
    "ragas==0.4.3",  # pinned after silent metric-failure incident; revisit when migrating off private `ragas.metrics._*` imports
    "datasets>=2.0",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.2",
]

[project.urls]
Homepage = "https://github.com/omkaradhali/pubmed_rag"
Repository = "https://github.com/omkaradhali/pubmed_rag"
Issues = "https://github.com/omkaradhali/pubmed_rag/issues"
Documentation = "https://github.com/omkaradhali/pubmed_rag#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/pubmed_rag"]

# ── uv index configuration ─────────────────────────────────────────────────
# Use PyTorch CPU-only builds (no GPU on this machine — avoids 500MB+ CUDA wheels)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

# ── Ruff (linter + formatter) ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "api"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[tool.ruff.lint.per-file-ignores]
"eval/*.py" = ["E501"]  # long question strings in EVAL_QUESTIONS are intentional

# ── Pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
